# src/main/kotlin/com/wutsi/platform/qr/dto/DecodeQRCodeRequest.kt
@@ -1,0 +1,9 @@
+package com.wutsi.platform.qr.dto
+
+import javax.validation.constraints.NotBlank
+import kotlin.String
+
+public data class DecodeQRCodeRequest(
+    @get:NotBlank
+    public val token: String = ""
+)
