# src/main/kotlin/com/wutsi/platform/qr/dto/DecodeQRCodeResponse.kt
@@ -1,0 +1,5 @@
+package com.wutsi.platform.qr.dto
+
+public data class DecodeQRCodeResponse(
+    public val entity: Entity = Entity()
+)
